[mojo-public] Async dispatch for associated errors

Associated endpoints have been getting error handler invocations
synchronously whenever their corresponding master interface endpoint is
closed. This is bad for reasons explained in the linked bug. Fix!

Bug: 864731
Change-Id: If4a7d205ab42be5ee43926be619e77ad0ab15d68
Reviewed-on: https://chromium-review.googlesource.com/1141078
Reviewed-by: Daniel Murphy <dmurph@chromium.org>
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Commit-Queue: Ken Rockot <rockot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576288}
Former-commit-id: dc4eddf6787185047877ddecf2577fe4af0a4d0d