content/renderer/dom_storage/local_storage_cached_areas_unittest.cc
@@ -11,12 +11,25 @@
 #include "content/public/common/content_features.h"
 #include "content/renderer/dom_storage/local_storage_cached_area.h"
 #include "content/renderer/dom_storage/mock_leveldb_wrapper.h"
+#include "testing/gtest/include/gtest/gtest.h"
 #include "third_party/blink/public/platform/scheduler/test/fake_renderer_scheduler.h"
 
 namespace content {
 
-TEST(LocalStorageCachedAreasTest, CacheLimit) {
-  base::test::ScopedTaskEnvironment scoped_task_environment;
+class LocalStorageCachedAreasTest : public testing::Test {
+  // testing::Test:
+  void TearDown() override {
+    // Some of these tests close message pipes which serve as master interfaces
+    // to other associated interfaces; this in turn schedules tasks to invoke
+    // the associated interfaces' error handlers, and local storage code relies
+    // on those handlers running in order to avoid memory leaks at shutdown.
+    scoped_task_environment_.RunUntilIdle();
+  }
+
+  base::test::ScopedTaskEnvironment scoped_task_environment_;
+};
+
+TEST_F(LocalStorageCachedAreasTest, CacheLimit) {
   const url::Origin kOrigin = url::Origin::Create(GURL("http://dom_storage1/"));
   const url::Origin kOrigin2 =
       url::Origin::Create(GURL("http://dom_storage2/"));
@@ -59,8 +72,7 @@ TEST(LocalStorageCachedAreasTest, CacheLimit) {
   EXPECT_EQ(cached_area2->memory_used(), cached_areas.TotalCacheSize());
 }
 
-TEST(LocalStorageCachedAreasTest, CloneBeforeGetArea) {
-  base::test::ScopedTaskEnvironment scoped_task_environment;
+TEST_F(LocalStorageCachedAreasTest, CloneBeforeGetArea) {
   base::test::ScopedFeatureList feature_list;
   feature_list.InitAndEnableFeature(features::kMojoSessionStorage);
   const std::string kNamespace1 = base::GenerateGUID();
